force-app/main/default/objects/Energy_Bill__c/Energy_Bill__c.object-meta.xml
<CustomObject>
  <description>
    Monthly energy bill. System of record is Data 360 (from SAP IS-U feed); SF
    holds latest for action reads.
  </description>
  <label>Energy Bill</label>
  <pluralLabel>Energy Bills</pluralLabel>
  <nameField>
    <displayFormat>BILL-{000000}</displayFormat>
    <label>Bill Number</label>
    <type>AutoNumber</type>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>