force-app/main/default/objects/Energy_Bill__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Energy Bills</relationshipLabel>
    <relationshipName>Energy_Bills</relationshipName>
</CustomField>