force-app/main/default/objects/Energy_Bill__c/fields/Amount__c.field-meta.xml
<CustomField>
  <fullName>Amount__c</fullName>
  <label>Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>