force-app/main/default/objects/Energy_Bill__c/fields/Consumption_kWh__c.field-meta.xml
<CustomField>
    <fullName>Consumption_kWh__c</fullName>
    <label>Consumption (kWh)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>