force-app/main/default/objects/Energy_Bill__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Service Contract</label>
    <type>Lookup</type>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Energy Bills</relationshipLabel>
    <relationshipName>Energy_Bills</relationshipName>
</CustomField>