force-app/main/default/objects/Energy_Bill__c/fields/Period_Start__c.field-meta.xml
<CustomField>
  <fullName>Period_Start__c</fullName>
  <label>Period Start</label>
  <type>Date</type>
</CustomField>