force-app/main/default/objects/Energy_Bill__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Open</fullName>
        <default>true</default>
        <label>Open</label>
      </value>
      <value>
        <fullName>Paid</fullName>
      </value>
      <value>
        <fullName>Overdue</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>