force-app/main/default/objects/Energy_Bill__c/listViews/All_Energy_Bills.listView-meta.xml
<ListView>
  <fullName>All_Energy_Bills</fullName>
  <columns>NAME</columns>
  <columns>Account__c</columns>
  <columns>Amount__c</columns>
  <columns>Consumption_kWh__c</columns>
  <columns>Status__c</columns>
  <columns>Period_Start__c</columns>
  <columns>Period_End__c</columns>
  <columns>CURRENCY_ISO_CODE</columns>
  <filterScope>Everything</filterScope>
  <label>All Energy Bills</label>
</ListView>